fixed gh actions workflow

--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -27,7 +27,7 @@ jobs:
         working-directory: doc/
         run: |
           conda activate cogent3
-          make html
+          make github
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
