BUG: fixed broken Makefile

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -23,11 +23,11 @@ livehtml:
 	sphinx-autobuild -b html $(ALLSPHINXOPTS) "$(SOURCEDIR)" $(BUILDDIR)/html
 
 html:
-	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) _build/html
+	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS)  "$(SOURCEDIR)" $(BUILDDIR)/html
 	@echo
 	@echo "Build finished. The HTML pages are in _build/html."
 	-rm -rf draw/
 
 github:
 	@make html
-	@cp -a _build/html/. ../docs
+	@cp -a $(BUILDDIR)/html/. ../docs
