DEV: updated for assembly of all docs
[CHANGED] github action now clones the cogent3/cogent3 repo and
    puts the cogent3/doc into cogent3org/doc/doc
[CHANGED] build environment updated to that from cogent3/cogent3,
    also does a pip install cogent[dev] from the cogent3/cogent3
    repo

--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -9,25 +9,43 @@ jobs:
     runs-on: 'macos-latest'
     steps:
       - uses: actions/checkout@v2
+        with:
+           path: c3org
+
+      - uses: actions/checkout@v2
+        with:
+           repository: cogent3/cogent3
+           path: c3src
+           ref: develop
+
+      - name: Move source docs into place
+      - shell: bash -l {0}
+        run: |
+          mv c3src/doc c3org/doc/doc
+
+      - name: Make conda environment
       - uses: goanpeca/setup-miniconda@v1
         with:
            activate-environment: cogent3
-           environment-file: doc/gh-environment.yml
-           python-version: 3.7
+           environment-file: c3org/doc/gh-environment.yml
+           python-version: 3.8
+
       - shell: bash -l {0}
         run: |
           conda activate cogent3
           conda info
           conda list
-      - name: Build it
+
+      - name: Build docs
         shell: bash -l {0}
-        working-directory: doc/
+        working-directory: c3org/doc/
         run: |
           conda activate cogent3
           make github
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs
+          publish_dir: c3org/docs
           publish_branch: master
