--- a/doc/gh-environment.yml
+++ b/doc/gh-environment.yml
@@ -1,11 +1,21 @@
 name: cogent3
 channels:
+  - plotly
   - conda-forge
 dependencies:
-  - python=3.7
   - pandoc
+  - python=3.8
+  - matplotlib
+  - plotly
+  - plotly-orca
   - pip
   - pip:
+    - numpydoc
+    - psutil
+    - pillow
+    - ipython
+    - ipykernel
+    - ipywidgets
     - sphinx>=1.6
     - nbsphinx
     - nbformat
@@ -13,3 +23,4 @@ dependencies:
     - sphinxcontrib-bibtex
     - sphinx-gallery
     - sphinx_bootstrap_theme
+    - git+https://github.com/cogent3/cogent3.git@develop#egg=cogent3[dev]
