--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -50,5 +50,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs
+          publish_dir: c3org/docs
           publish_branch: master
