ENH: using jupyter_sphinx and sphinx_panels
[NEW] also moving set_working_directory.py into place, required for
    excution of code cells by jupyter_sphinx

--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -21,6 +21,7 @@ jobs:
       - shell: bash -l {0}
         run: |
           mv c3src/doc c3org/doc/doc
+          cp c3org/doc/doc/set_working_directory.py c3src/.
 
       - name: Make conda environment
         uses: goanpeca/setup-miniconda@v1
