MAINT: added new build dependencies into gh conda environment

--- a/doc/gh-environment.yml
+++ b/doc/gh-environment.yml
@@ -10,6 +10,7 @@ dependencies:
   - plotly-orca
   - pip
   - pip:
+    - jupyter-sphinx
     - numpydoc
     - psutil
     - pillow
@@ -23,4 +24,5 @@ dependencies:
     - sphinxcontrib-bibtex
     - sphinx-gallery
     - sphinx_bootstrap_theme
+    - sphinx_panels
     - git+https://github.com/cogent3/cogent3.git@develop#egg=cogent3[dev]
