--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -21,7 +21,7 @@ jobs:
       - shell: bash -l {0}
         run: |
           mv c3src/doc c3org/doc/doc
-          cp c3org/doc/doc/set_working_directory.py c3src/.
+          cp c3org/doc/doc/set_working_directory.py c3org/doc/.
 
       - name: Make conda environment
         uses: goanpeca/setup-miniconda@v1
