MAINT: switch to kaleido from plotly-orca

--- a/doc/gh-environment.yml
+++ b/doc/gh-environment.yml
@@ -1,18 +1,17 @@
 name: cogent3
 channels:
-  - plotly
   - conda-forge
 dependencies:
   - pandoc
   - python=3.8
   - matplotlib
-  - plotly
-  - plotly-orca
   - pip
   - pip:
     - jupyter-sphinx
     - numpydoc
     - psutil
+    - plotly
+    - kaleido
     - pillow
     - ipython
     - ipykernel
