--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -32,6 +32,7 @@ jobs:
         if: startsWith(runner.os, 'macOS') || startsWith(runner.os, 'Linux')
         run: |
           echo `pwd`
+          echo `ls`
           python --version
           python -m venv .venv
           source .venv/bin/activate
