--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -43,7 +43,7 @@ jobs:
         shell: bash -l {0}
         working-directory: c3org/doc/
         run: |
-          conda activate cogent3
+          source .venv/bin/activate
           make github
 
       - name: Deploy
