--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -31,8 +31,6 @@ jobs:
       - name: "Setup virtualenv and install cogent3[dev]"
         if: startsWith(runner.os, 'macOS') || startsWith(runner.os, 'Linux')
         run: |
-          echo `pwd`
-          echo `ls c3src`
           python --version
           python -m venv .venv
           source .venv/bin/activate
@@ -43,7 +41,7 @@ jobs:
         shell: bash -l {0}
         working-directory: c3org/doc/
         run: |
-          source .venv/bin/activate
+          source ../../.venv/bin/activate
           make github
 
       - name: Deploy
