use the requirements file

--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -35,7 +35,7 @@ jobs:
           python -m venv .venv
           source .venv/bin/activate
           python -m pip install --upgrade pip wheel setuptools
-          python -m pip install "./c3src[dev]"
+          python -m pip install -r c3org/requirements.txt
 
       - name: Build docs
         shell: bash -l {0}
