pin version of sphinxcontrib-bibtex

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ sphinx>=1.6
 nbsphinx
 nbformat
 nbconvert!=5.4
-sphinxcontrib-bibtex
+sphinxcontrib-bibtex<2.0.0
 sphinx-gallery==0.7
 sphinx_bootstrap_theme
 sphinx_panels
