--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,4 @@ sphinx-gallery==0.7
 sphinx_bootstrap_theme
 sphinx_panels
 git+https://github.com/cogent3/cogent3.git@develop#egg=cogent3[dev]
+matplotlib
