DEV: update for sphinxcontrib-bibtex>2.0

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,8 @@ ipywidgets
 sphinx>=1.6
 nbsphinx
 nbformat
-nbconvert!=5.4
-sphinxcontrib-bibtex<2.0.0
+nbconvert>5.4
+sphinxcontrib-bibtex
 sphinx-gallery==0.7
 sphinx_bootstrap_theme
 sphinx_panels
