--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ nbsphinx
 nbformat
 nbconvert>5.4
 sphinxcontrib-bibtex
-sphinx-gallery==0.7
+sphinx-gallery
 sphinx_bootstrap_theme
 sphinx_panels
 git+https://github.com/cogent3/cogent3.git@develop#egg=cogent3[dev]
