DEV: use ubuntu-latest for github action

--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   example-3:
     name: Doc Build
-    runs-on: 'macos-latest'
+    runs-on: 'ubuntu-latest'
     steps:
       - uses: actions/checkout@v2
         with:
