--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,13 @@ pillow
 ipython
 ipykernel
 ipywidgets
-sphinx>=1.6
+sphinx
 nbsphinx
 nbformat
 nbconvert>5.4
 sphinxcontrib-bibtex
-sphinx-gallery
-sphinx_bootstrap_theme
 sphinx_panels
-git+https://github.com/cogent3/cogent3.git@develop#egg=cogent3[dev]
-matplotlib
+sphinxcontrib-video
+pydata_sphinx_theme
+typer
+cogent3[doc] @ git+https://github.com/cogent3/cogent3.git@develop
