DEV: replace sphinx_panels with sphinx_design

--- a/doc/gh-environment.yml
+++ b/doc/gh-environment.yml
@@ -23,5 +23,5 @@ dependencies:
     - sphinxcontrib-bibtex
     - sphinx-gallery==0.7
     - sphinx_bootstrap_theme
-    - sphinx_panels
+    - sphinx_design
     - git+https://github.com/cogent3/cogent3.git@develop#egg=cogent3[dev]
