--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ nbformat
 nbconvert>5.4
 pydata_sphinx_theme
 sphinxcontrib-bibtex
-sphinx_panels
+sphinx_design
 sphinxcontrib-video
 typer
 cogent3[doc] @ git+https://github.com/cogent3/cogent3.git@develop
