python 311 & rename project

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Cogent3 documentation",
+    "name": "Cogent3.org",
     "dockerFile": "../Dockerfile",
     "settings": {
         "terminal.integrated.shell.linux": "/bin/zsh"
